<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vfrin.valentijnfrinking_pset1.MainActivity"
    android:weightSum="1">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="MR POTATO HEAD"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="40dp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="250dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/body"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/switch2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="visible"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/switch2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/switch2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/shoes" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/switch6"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/switch4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="false"
            android:visibility="invisible"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/switch4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/mustache" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/arms" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/switch4"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/nose" />

        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1.01">

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/switch1"
                android:layout_alignEnd="@+id/switch3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/switch3"
                android:text="@string/nose_switch" />


            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/switch3"
                android:layout_alignEnd="@+id/switch3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/switch3"
                android:text="@string/ears_switch" />


            <Switch
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/switch2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/mouth_switch" />


            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/switch2"
                android:layout_alignLeft="@+id/switch4"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/switch2"
                android:layout_alignStart="@+id/switch4"
                android:layout_marginBottom="12dp"
                android:text="@string/eyes_switch" />


            <Switch
                android:id="@+id/switch6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/switch7"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/switch7"
                android:layout_alignTop="@+id/switch5"
                android:text="@string/shoes_switch" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="174dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/switch8"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/switch8"
                android:layout_below="@+id/switch6"
                android:text="@string/arms_switch" />


            <Switch
                android:id="@+id/switch8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/switch9"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/switch9"
                android:layout_below="@+id/switch7"
                android:text="@string/eyebrow_switch" />

            <Switch
                android:id="@+id/switch9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/switch10"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/switch10"
                android:layout_below="@+id/switch8"
                android:text="@string/glasses_switch" />

            <Switch
                android:id="@+id/switch5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/switch4"
                android:layout_alignEnd="@+id/switch4"
                android:layout_alignLeft="@+id/switch4"
                android:layout_alignRight="@+id/switch4"
                android:layout_alignStart="@+id/switch4"
                android:text="@string/hat_switch" />

            <Switch
                android:id="@+id/switch10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/switch9"
                android:text="@string/mustache_switch" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
